# realworld-backend

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yaml  justfile  otel-collector-config.yaml
.github/workflows/: ci.yaml  release-axum.yml  release-poem-openapi.yml  release.yml
config/: default.yaml  dev.yaml  docker.yaml
examples/: jwt.rs
k8s/: kustomization.yaml  realworld-backend.yaml
migrations/pg/: 001_initial.sql
realworld-backend-axum/: Cargo.toml
realworld-backend-poem-openapi/: Cargo.toml
realworld-backend-poem-openapi/config/: default.yaml
realworld-backend-poem-openapi/examples/: password_hash.rs
realworld-backend-poem-openapi/migrations/: 001_initial.sql
realworld-backend-poem-openapi/src/: main.rs
realworld-backend-poem-openapi/src/api/: mod.rs  user.rs
realworld-backend-poem-openapi/src/domain/: mod.rs
realworld-backend-poem-openapi/src/domain/user/: mod.rs
realworld-backend-poem-openapi/src/infra/: mod.rs  token_factory.rs
src/: config.rs  domain.rs  infra.rs  main.rs  telemetry.rs
src/api/: mod.rs  user.rs
src/api/axum/: mod.rs  user.rs
src/api/poem_openapi/: mod.rs  user.rs
src/domain/: mod.rs  user.rs  user_repository.rs  user_service.rs
src/domain/user/: mod.rs  user_repository.rs
src/infra/: api.rs  pg_migrations.rs  pg_pool.rs  pg_user_repository.rs  sqlite_repository.rs  token_factory.rs
src/infra/api/: tokens.rs  v0.rs
src/infra/api/v0/: users.rs
