[package]
name          = "realworld-backend"
description   = "RealWorld backend implementation in Rust."
version       = "0.2.5"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/realworld-backend"
repository    = "https://github.com/hseeberger/realworld-backend"
documentation = "https://github.com/hseeberger/realworld-backend"
publish       = false

[dependencies]
# common
anyhow             = { version = "1.0", features = [ "backtrace" ] }
argon2             = { version = "0.5" }
base64             = { version = "0.21" }
configured         = { version = "0.7" }
email_address      = { version = "0.2" }
frunk              = { version = "0.4" }
futures            = { version = "0.3" }
humantime-serde    = { version = "1.1" }
jwt-simple         = { version = "0.11" }
regex              = { version = "1.9" }
secrecy            = { version = "0.8", features = [ "serde" ] }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
sqlx               = { version = "0.7", features = [ "migrate", "runtime-tokio", "sqlite" ] }
thiserror          = { version = "1.0" }
time               = { version = "0.3", features = [ "formatting", "parsing", "serde" ] }
tokio              = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
uuid               = { version = "1.6", features = [ "serde", "v7" ] }
# axum
axum              = { version = "0.6", features = [ "headers", "http2", "json", "macros" ], optional = true }
const_format      = { version = "0.2" }
tower             = { version = "0.4", optional = true }
tower-http        = { version = "0.5", features = [ "cors", "trace" ], optional = true }
utoipa            = { version = "4.1", features = [ "axum_extras" ], optional = true }
utoipa-swagger-ui = { version = "4.0", features = [ "axum" ], optional = true }
# poem-openapi
poem         = { version = "1.3", features = [ "anyhow" ], optional = true }
poem-openapi = { version = "3.0", features = [ "email", "swagger-ui" ], optional = true }

[dev-dependencies]
clap = { version = "4.4", features = [ "derive" ] }

[features]
axum         = [ "dep:axum", "dep:tower", "dep:tower-http", "dep:utoipa", "dep:utoipa-swagger-ui" ]
poem-openapi = [ "dep:poem", "dep:poem-openapi" ]
