[package]
name          = "realworld-backend"
description   = "RealWorld backend implementation in Rust with axum."
version       = "0.2.5"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/realworld-backend"
repository    = "https://github.com/hseeberger/realworld-backend"
documentation = "https://github.com/hseeberger/realworld-backend"
publish       = false

[dependencies]
# common
anyhow          = { version = "1.0", features = [ "backtrace" ] }
argon2          = { version = "0.5" }
axum            = { version = "0.7", features = [ "http2", "json" ] }
axum-extra      = { version = "0.9", features = [ "typed-header" ] }
base64          = { version = "0.22" }
configured      = { version = "0.7" }
email_address   = { version = "0.2" }
frunk           = { version = "0.4" }
humantime-serde = { version = "1.1" }
# Revisit default-features/features once the issue with the boring dependency has been solved!
jwt-simple         = { version = "0.12", default-features = false, features = [ "pure-rust" ] }
regex              = { version = "1.10" }
secrecy            = { version = "0.8", features = [ "serde" ] }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
sqlx               = { version = "0.7", features = [ "migrate", "runtime-tokio", "sqlite" ] }
thiserror          = { version = "1.0" }
time               = { version = "0.3", features = [ "formatting", "parsing", "serde" ] }
tokio              = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower              = { version = "0.4" }
tower-http         = { version = "0.5", features = [ "cors", "trace" ] }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
utoipa             = { version = "4.2", features = [ "axum_extras" ] }
utoipa-swagger-ui  = { version = "7.1", features = [ "axum" ] }
uuid               = { version = "1.8", features = [ "serde", "v7" ] }

[dev-dependencies]
assert_matches = { version = "1.5" }
clap           = { version = "4.5", features = [ "derive" ] }
