[package]
name          = "realworld-backend-axum"
description   = "RealWorld backend implementations in Rust with axum"
version       = "0.1.0"
rust-version  = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]

[dev-dependencies]
