[package]
name          = "realworld-backend-poem-openapi"
description   = "RealWorld backend implementations in Rust with poem-openapi."
version       = "0.1.0"
rust-version  = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
argon2             = { workspace = true }
base64             = { workspace = true }
configured         = { workspace = true }
email_address      = { workspace = true }
futures            = { workspace = true }
humantime-serde    = { workspace = true }
jwt-simple         = { workspace = true }
poem               = { workspace = true }
poem-openapi       = { workspace = true }
regex              = { workspace = true }
secrecy            = { workspace = true }
serde              = { workspace = true }
sqlx               = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
base64     = { workspace = true }
clap       = { workspace = true }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
time       = { workspace = true }
